--- a/src/assets/styles/weui/base/variable/color.less
+++ b/src/assets/styles/weui/base/variable/color.less
@@ -1,12 +1,16 @@
 // color
 @weuiColorPrimary: #1AAD19;
+@weuiColorPrimaryLight:#09BB07;
+@weuiColorPrimaryActive: #179B16;
+@weuiColorHighlight: #E59313;
 @weuiColorWarn: #E64340;
-
+@weuiColorWarnActive: #CE3C39;
 // link
 @weuiLinkColorDefault: #586C94;
 
 // background
 @weuiBgColorDefault: #EFEFF4;
+@weuiBgColorPlain: #FFFFFF;
 @weuiBgColorActive: #ECECEC;
 
 // line
@@ -17,4 +21,7 @@
 @weuiTextColorTitle: #000000;
 @weuiTextColorTips: #B2B2B2;
 @weuiTextColorWarn: @weuiColorWarn;
-@weuiTextColorGray: #999999;
+@weuiTextColorLightGray: #999999;
+@weuiTextColorGray: #666666;
+@weuiTextColorGrayWeight: #333333;
+@weuiTextColorDark: #000000;
